/*---------------------------------------------------------------------------------------------
 *  Copyright (c) Dolittle. All rights reserved.
 *  Licensed under the MIT License. See LICENSE in the project root for license information.
 *--------------------------------------------------------------------------------------------*/
syntax = "proto3";

import "dolittle/timeseries/datatypes/measurement.proto";

package dolittle.timeseries.datatypes;

option csharp_namespace = "Dolittle.TimeSeries.DataTypes.Protobuf";

message Vector3 {
    Measurement x = 1;
    Measurement y = 2;
    Measurement z = 3;
}
